# webgpudd

./: .gitignore  0001-DO-NOT-SUBMIT.patch  0001-Fix-build-on-RockyLinux-8.9.patch  0001-Fix-build-on-alpine.patch  0001-Fix-build-on-debian-11.patch  0001-Make-fetch_dawn_dependencies.py-work-with-python-3.6.patch  CMakeLists.txt  Dockerfile  Dockerfile.demo  Makefile  README.md  client_tcp.cpp  client_tcp.h  command_buffer.cpp  command_buffer.h  libwebgpu-alpine.Dockerfile  libwebgpu-debian.Dockerfile  libwebgpu-glibc.Dockerfile  libwebgpu-musl.Dockerfile  matmul-native.cpp  matmul.cpp  runtime-debian.Dockerfile  runtime-rocky.Dockerfile  runtime-ubuntu.Dockerfile  server.cpp  server_tcp.cpp  server_tcp.h  test_client.cpp  test_server.cpp  webgpudd.cpp  webgpudd.h
.github/workflows/: build-runtime-linux.yml  build-runtime-macos.yml  build.yml  cmake-multi-platform.yml
include/: webgpu.h  webgpudd-internal.h  webgpudd.h
src/client/: CMakeLists.txt  dawn_client.cpp  dawn_client.h  proc.cpp  webgpudd.cpp
src/common/: client_tcp.cpp  client_tcp.h  command_buffer.cpp  command_buffer.h  dawn_command_buffer.cpp  dawn_command_buffer.h  dawn_command_transport.cpp  dawn_command_transport.h
src/examples/: HOW_IT_WORKS.md  Makefile  README.md  client.cpp  matmul  matmul.cpp  matmul_cpu.hpp  matmul_gpu.hpp  wgpu_util.hpp
src/server/: CMakeLists.txt  dawn_server.cpp  dawn_server.h  server.cpp  server_tcp.cpp  server_tcp.h  webgpu_server.cpp
